crates/nash-ir/src/single_use/snapshots/nash_ir__single_use__tests__call_type_view.snap
---
source: crates/nash-ir/src/single_use/tests.rs
---
--- core before rule 3
\(f#1 : int -> int -> int) -> let p#2 : int -> int = f#1 20 in
p#2 22
--- core after rule 3
\(f#1 : int -> int -> int) -> let p#2 : int -> int = f#1 20 in
p#2 22
--- core after rules 1 + 2 + 3
\(f#1 : int -> int -> int) -> let p#2 : int -> int = f#1 20 in
p#2 22
