crates/nash-ir/src/single_use/snapshots/nash_ir__single_use__tests__computed_function_operand_remains_bound.snap
---
source: crates/nash-ir/src/single_use/tests.rs
assertion_line: 96
---
--- core before rule 3
let f#2 : int -> int = trace "before" in \x#1 : int -> x#1 in
f#2 42
--- core after rule 3
let f#2 : int -> int = trace "before" in \x#1 : int -> x#1 in
f#2 42
--- core after rules 1 + 2 + 3
let f#2 : int -> int = trace "before" in \x#1 : int -> x#1 in
f#2 42
