crates/nash-ir/src/single_use/snapshots/nash_ir__single_use__tests__escaping_partial_call.snap
---
source: crates/nash-ir/src/single_use/tests.rs
---
--- core before rule 3
\(f#1 : int -> int -> int) -> let p#2 : int -> int = f#1 20 in
\n#3 : int -> p#2 n#3
--- core after rule 3
\(f#1 : int -> int -> int) -> let p#2 : int -> int = f#1 20 in
\n#3 : int -> p#2 n#3
--- core after rules 1 + 2 + 3
\(f#1 : int -> int -> int) -> let p#2 : int -> int = f#1 20 in
\n#3 : int -> p#2 n#3
