crates/nash-ir/src/single_use/snapshots/nash_ir__single_use__tests__multiple_use_function_stays_shared.snap
---
source: crates/nash-ir/src/single_use/tests.rs
assertion_line: 125
---
--- core before rule 3
let f#3 : int -> int = \x#1 : int -> x#1 in
let result#2 : int = f#3 1 in
f#3 42
--- core after rule 3
let f#3 : int -> int = \x#1 : int -> x#1 in
let result#2 : int = f#3 1 in
f#3 42
--- core after rules 1 + 2 + 3
let f#3 : int -> int = \x#1 : int -> x#1 in
let result#2 : int = f#3 1 in
f#3 42
