crates/nash-ir/src/single_use/snapshots/nash_ir__single_use__tests__single_builtin.snap
---
source: crates/nash-ir/src/single_use/tests.rs
assertion_line: 153
---
--- core before rule 3
let add#2 : int -> int -> int = addInteger in
add#2 40 2
--- core after rule 3
addInteger 40 2
--- core after rules 1 + 2 + 3
addInteger 40 2
